5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1575_1332.log
== TEST (2019-03-13 12:50:20) 
-- CODE:
aresta = 5**2
area = 1.5*3**1/2*aresta
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:50:33) 
-- CODE:
aresta = 5**2
area = 1.5*3**1/2*aresta
 
print(round(area, 4))
-- EXECUTION TIME:
0.134824
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:51:12) 
-- CODE:
aresta = 5**2
area = 1.5*3**1/2
 
print(round(area, 4))
-- OUTPUT:
2.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:52:11) 
-- CODE:
aresta = 5**2
area = aresta*1.5*3**1/2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:52:15) 
-- CODE:
aresta = 5**2
area = aresta*1.5*3**1/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.122472
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:52:40) 
-- CODE:
aresta = 5**2
area = 1.5*3**1/2
 
print(round(area*aresta, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:52:43) 
-- CODE:
aresta = 5**2
area = 1.5*3**1/2
 
print(round(area*aresta, 4))
-- EXECUTION TIME:
0.155809
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:54:23) 
-- CODE:
aresta = 
area = 1.5*3**1/2*5**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta = 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:54:30) 
-- CODE:
aresta 
area = 1.5*3**1/2*5**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    aresta 
NameError: name 'aresta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:56:17) 
-- CODE:
aresta = 5**2
area = ((1.5)*(3**1/2)*(aresta))
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:56:20) 
-- CODE:
aresta = 5**2
area = ((1.5)*(3**1/2)*(aresta))
 
print(round(area, 4))
-- EXECUTION TIME:
0.152924
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:56:22) 
-- CODE:
aresta = 5**2
area = ((1.5)*(3**1/2)*(aresta))
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:57:17) 
-- CODE:
aresta = 5
area = ((1.5)*(3**1/2)*(aresta**2))
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:57:29) 
-- CODE:
aresta = 5
area = ((1.5)*(3**1/2)*(aresta**2))
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:57:47) 
-- CODE:
aresta = 5
area = ((3/2)*(3**0.5)*(aresta**2))
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:00:14) 
-- CODE:
aresta = 5
area = ((3/2)*(3**0.5)*(aresta**2))
 
print(round(area, 4))
-- EXECUTION TIME:
0.173345
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
